# milabench

./: .buildinfo  .flake8  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  Dockerfile  LICENSE  Makefile  README.md  chart.html  commands.sh  config.html  dev-usage.html  devreqs.txt  docker.html  docker.txt  execution_modes.html  flow.html  genindex.html  index.html  instrument.html  new_benchmarks.html  objects.inv  out.txt  out.xt  platforms.toml  process.html  py-modindex.html  pyproject.toml  recipes.html  ref-pack.html  reference.html  run.sh  run_scaling.sh  scale.py  scale.sh  search.html  searchindex.js  sizer.html  (+4 more)
.doctrees/: config.doctree  dev-usage.doctree  environment.pickle  index.doctree  instrument.doctree  new_benchmarks.doctree  ref-pack.doctree  reference.doctree  usage.doctree
.github/workflows/: ci.yml  cleanup.yml  cloud-ci.yml  (+11 more)
.pin/: constraints-cpu-torch.txt  constraints-cuda-gnn.txt  constraints-cuda-jax.txt  constraints-cuda-torch.txt  constraints-hpu-torch.txt  constraints-rocm-gnn.txt  constraints-rocm-torch.txt  constraints-xpu-torch.txt  constraints.common.txt  constraints.cpu.torch2100.txt  constraints.cpu.torch2110.txt  constraints.cpu.torch2121.txt  constraints.cuda126.torch2100.txt  constraints.cuda126.torch2110.txt  constraints.cuda126.torch2121.txt  constraints.cuda128.torch2100.txt  constraints.cuda128.torch2110.txt  constraints.cuda130.torch2100.txt  constraints.cuda130.torch2110.txt  constraints.cuda130.torch2121.txt  constraints.cuda132.torch2121.txt  constraints.rocm70.torch2100.txt  constraints.rocm71.torch2100.txt  constraints.rocm71.torch2110.txt  constraints.rocm71.torch2121.txt  constraints.rocm72.torch2110.txt  constraints.rocm72.torch2121.txt
Contributing/: config.html  design.html  dev-usage.html  instrument.html  new_benchmarks.html  overview.html  process.html  recipes.html  sizer.html
GettingStarted/: docker.html  usage.html
Welcome/: Changelog.html  Features.html  Roadmap.html
_sources/: config.rst.txt  dev-usage.rst.txt  docker.rst.txt  index.rst.txt  instrument.rst.txt  new_benchmarks.rst.txt  recipes.rst.txt  ref-pack.rst.txt  start.rst.txt  usage.rst.txt
baselines/: rtx.json
benchmate/: README.rst  pyproject.toml
benchmate/benchmate/: __init__.py  analysis.py  benchrun.py  common.py  datagen.py  dataloader.py  dataset.py  hugginface.py  ipmi.py  iterator.py  jaxmem.py  metrics.py  models.py  monitor.py  observer.py  profiler.py  progress.py  timeline.py  timings.py  toggles.py  ux.py  warden.py
benchmate/tests/: iterator.py  test_timings.py
config/: 4nodes.yaml  _defaults.yaml  all.yaml  amd.yaml  ao417.yaml  base.yaml  ci-cpu.yaml  ci-cuda.yaml  ci-rocm.yaml  ci-system.yaml  ci.yaml  cloud-multinodes-system.yaml  cloud-system.yaml  dataloader.yaml  efficiency.yaml  fast.yaml  high.yaml  inference.yaml  llm_inference.yaml  matrix.yaml  medium.yaml  meta.yaml  others.yaml  resnet50.yaml  retired.yaml  scaling.og.yaml  scaling.yaml  sizing.yaml  slurm.yaml  stacc.yaml  standard-8G.yaml  standard-cuda.yaml  standard-rocm.yaml  standard.yaml  synthetic.yaml  system.yaml  test.yaml  testreport.yaml  training.yaml  vllm.yaml
constraints/: cuda.txt  hpu.txt  rocm.txt  xpu.txt
docker/: 1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  Dockerfile-cuda  Dockerfile-hpu  Dockerfile-ngc  Dockerfile-report  Dockerfile-rocm  Dockerfile-xpu  Makefile  README.md  docker_hpu.sh  install.bash  push_image.bash  run-cuda.bash  run-rocm.bash
docs/: conf.py  dev-usage.rst  docker.rst  execution_modes.rst  flow.rst  index.rst  instrument.rst  new_benchmarks.rst  process.rst  recipes.rst  reference.rst  requirements.txt  sizer.rst  start.rst  usage.rst
examples/: amd_output.txt  nvidia_output.err  nvidia_output.out  nvidia_summary.json
milabench/: __init__.py  _version.py  alt_async.py  bench.py  capability.py  cli.py  common.py  compare.py  config.py  evalctx.py  exechelpers.py  executors.py  fs.py  gpu.py  instrument.py  instruments.py  log.py  main.py  merge.py  metadata.py  multi.py  network.py  opt.py  pack.py  remote.py  report.py  run.py  schedule.py  server.py  sizer.py  slurm.py  structs.py  summary.py  syslog.py  system.py  testing.py  utils.py  validation.py  vcs.py
milarun/: cli.py  fs.py  instrument.py  monitor.py  multi.py  pack.py  runner.py  utils.py
profiles/: 10gb.json  5gb.json  lite.json  standard.json
script/: dependencies.bash  nightly.bash  nightly_overrides.bash  nightly_overrides_rocm.bash  push_image.bash  setup.bash  slurm.bash
scripts/: Makefile  activator  apt_packages  barebone.out  barebone_voir.out  beegfs  beegfs.py  build.py  cgroup_setup.sh  compute_resource.sh  docker_cgroup_setup.sh  docker_entry.sh  download.sh  install-apt-packages.sh  install-poetry.sh  install.bash  install.sh  install_conda.sh  instructions.sh  interactive.sh  l40s_resizing.sh  loghw.sh  make-baselines-html.fish  mig.sh  playbook.yaml  postgresql.yaml  postgresqlconf.yaml  report.sh  reuse.sh  run.sh  schedule.sh  setup.sh  setup.sql  setup_vm.sh  slurm.bash  slurm.sh  slurm_barebone.sh  ssh-test-server.sh  tables.sql  update_pins.sh
tests/: conftest.py  test_capabilities.py  test_command.py  test_command_reg.py  test_config.py  test_consistency.py  test_dash.py  test_dependencies.py  test_error.py  test_evalctx.py  test_executors.py  test_github_issues.py  test_metadata.py  test_metrics.py  test_mock.py  test_network.py  test_regression.py  test_scaler.py  test_slurm.py  test_summary.py  test_system_matrix.py  test_utils.py  test_validation.py
weights/: 10gb.json  5gb.json  standard.json
(+2299 files in other folders)
