[tool.poetry]
name = "milabench"
version = "0.1.0"
description = "Benchmarking suite for machine learning algorithms"
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
giving = "^0.3.10"
ptera = "^1.2.0"
rich = "^10.13.0"
coleo = "^0.3.0"
requests = "^2.26.0"
nox = "^2021.10.1"
GitPython = "^3.1.24"
PyYAML = "^6.0"
ovld = "^0.3.2"
GPUtil = "^1.4.0"
hrepr = "^0.4.0"
blessed = "^1.19.1"
pathspec = "^0.9.0"
cp-template = "^0.3.0"
voir = "^0.1.0"
pandas = "^1.4.2"
numpy = ">=1.15.0"

[tool.poetry.dev-dependencies]
black = ">=21.10b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
milabench = "milabench.cli:main"

[tool.poetry.plugins."voir.instrument"]
compute_rate = "milabench.instruments:compute_rate"
dash = "milabench.instruments:dash"
display = "milabench.instruments:display"
loading_rate = "milabench.instruments:loading_rate"
profile_gpu = "milabench.instruments:profile_gpu"
stop = "milabench.instruments:stop"
train_rate = "milabench.instruments:train_rate"
verify = "milabench.instruments:verify"
metric = "milabench.instruments:metric"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
