[tool.poetry]
name = "milabench"
version = "0.1.0"
description = "Benchmarking suite for machine learning algorithms"
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
giving = "^0.4.0"
ptera = "^1.2.0"
coleo = "^0.3.0"
requests = "^2.26.0"
nox = "^2021.10.1"
GitPython = "^3.1.24"
PyYAML = "^6.0"
ovld = "^0.3.2"
hrepr = "^0.4.0"
blessed = "^1.19.1"
pathspec = "^0.9.0"
cp-template = "^0.3.0"
voir = "^0.2.10"
pandas = "^1.4.2"
numpy = ">=1.23.0"
pynvml = "^11.4.1"
tqdm = "^4.64.1"
pip-tools = "^6.12.3"
rich = "^13.3.2"
omegaconf = "^2.3.0"
sqlalchemy = "^2.0.15"
pymongo =  "^4.3.3"
psycopg2-binary = {version = "^2.9.6", optional = true}

[tool.poetry.dev-dependencies]
black = ">=21.10b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
pytest-regressions = "^2.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
milabench = "milabench.cli:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
