[tool.poetry]
name = "milabench"
version = "0.1.0"
description = "Benchmarking suite for machine learning algorithms"
authors = [
    "Olivier Breuleux <breuleux@gmail.com>", 
    "Pierre Delaunay <pierre.delaunay@mila.quebec>", 
    "Satya Ortiz-Gagne <satya.ortiz-gagne@mila.quebec>" 
]
license = "MIT"

[tool.poetry.dependencies]
voir =  ">=0.2.18"
benchmate =  {path = "benchmate", develop = false}
python = ">=3.10,<4.0"
giving = "^0.4.0"
ptera = "^1.2.0"
coleo = "^0.3.0"
requests = "^2.26.0"
nox = "^2021.10.1"
GitPython = "^3.1.24"
PyYAML = "^6.0"
ovld = "^0.3.2"
hrepr = "^0.4.0"
blessed = "^1.19.1"
pathspec = "^0.9.0"
cp-template = "^0.3.0"
pandas = ">=1.4.2"
numpy = ">=1.23.0,<2.0.0"
tqdm = "^4.64.1"
pip-tools = "^7.4.1"
rich = "^13.3.2"
omegaconf = "^2.3.0"
sqlalchemy = "^2.0.15"
pymongo =  "^4.3.3"
psycopg2-binary = {version = "^2.9.6", optional = true}
py-cpuinfo = "^9.0.0"
psutil = "^5.9.5"
importlib-resources = "^6.1.0"
filelock = "^3.15.3"

[tool.poetry.group.dev.dependencies]
black = ">=21.10b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
pytest-regressions = "^2.4.2"
coverage = "^7.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = "milabench/scripts/vcs.py"

[tool.poetry.scripts]
milabench = "milabench.cli:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.poetry-git-version-plugin]
alpha_version_format = '{version}a{distance}+{commit_hash}'
